--- a/config/database.yml
+++ b/config/database.yml
@@ -14,12 +14,10 @@
 #
 development:
   adapter: postgis
-  encoding: unicode
   database: bluecarbon_development
+  username: timwilkinson
+  password: 
   host: localhost
-  pool: 5
-  username: postgres
-  password: postgres
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -41,19 +39,13 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgis
-  encoding: unicode
   database: bluecarbon_test
-  pool: 5
-  username: postgres
-  password: postgres
   host: localhost
-  template: template_postgis
+  username: timwilkinson
+  password: 
+  host: localhost
 
 production:
-  adapter: postgis
-  encoding: unicode
+  adapter: postgresql
   database: bluecarbon_production
-  pool: 5
-  username: postgres
-  password: postgres
   host: localhost
