--- a/config/config.yml
+++ b/config/config.yml
@@ -1,15 +1,20 @@
-development:
-  projectmill_path: '$HOME/Projects/ecoplotter/projectmill'
+default: &default
   tilemill_path: '/usr/share/tilemill'
+  redis_url: <%= ENV["REDIS_URL"] %>
+
+development:
+  <<: *default
+  projectmill_path: '$HOME/Projects/ecoplotter/projectmill'
 
 test:
+  <<: *default
   projectmill_path: '$HOME/Projects/ecoplotter/projectmill'
-  tilemill_path: '/usr/share/tilemill'
 
 staging:
-  projectmill_path: '$HOME/temp/projectmill'
-  tilemill_path: '$HOME/temp/tilemill'
+  <<: *default
+  projectmill_path: '$HOME/mapbox/projectmill'
+
 
 production:
+  <<: *default
   projectmill_path: '$HOME/mapbox/projectmill'
-  tilemill_path: '/usr/share/tilemill'
